inserindo barra de progresso

--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
             <!-- options -->
         </div>
 
+        <div class="progress">
+            <span class="progress-percent">
+                
+            </span>
+        </div>
+
     </div>
 
     <div class="result">
